data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_289.wast
;; 10. **Test with `loop` containing a series of `nop` and nested `br_table` control checks**:    - **Constraint**: Ensures complex nested control structures with `nop` do not disrupt flow.    - **Relation to Infinite Loops**: Mismanagement in `nop` could lead to improper table jumps leading to infinite iterations within the loop.

(assert_invalid
  (module
    (func (loop (nop) (block (br_table 0 0 0) (nop))))
  )
  "br_table destination out of range format mismatch"
)